<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/_10sdp"
		android:background="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginVertical="@dimen/_10sdp"
		android:layout_marginHorizontal="@dimen/_20sdp">

		<TextView
			android:id="@+id/tv_top"
			style="@style/LoginSubFontsWrap"
			android:text="@string/select_provider"
			android:textColor="@color/black"
			android:layout_marginStart="@dimen/_5sdp"
			android:layout_marginTop="@dimen/_5sdp"
			android:fontFamily="@font/inter_medium"
			android:textSize="@dimen/_12sdp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/tv_apply"
			style="@style/LoginSubFontsWrap"
			android:text="@string/apply"
			android:textColor="@color/orange"
			android:layout_marginEnd="@dimen/_5sdp"
			android:layout_marginTop="@dimen/_5sdp"
			android:fontFamily="@font/inter_medium"
			android:textSize="@dimen/_12sdp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/cl_search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/_1sdp"
			android:background="@drawable/gray_round_border_background"
			android:layout_marginTop="@dimen/_10sdp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tv_top">

			<ImageView
				android:id="@+id/iv_search_icon"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:src="@drawable/ic_search"
				android:layout_marginStart="@dimen/_10sdp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:contentDescription="@string/username_title" />

			<EditText
				android:id="@+id/et_search"
				style="@style/LoginSubFontsZeroWrap"
				android:minHeight="@dimen/_35sdp"
				android:textColor="@color/black"
				android:background="@null"
				android:paddingHorizontal="@dimen/_10sdp"
				android:hint="@string/search_hint"
				android:focusableInTouchMode="true"
				android:textColorHint="@color/hint_color"
				android:imeOptions="actionSearch"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@id/iv_search_icon"
				app:layout_constraintEnd_toEndOf="parent"
				android:autofillHints="phone"
				android:inputType="textPersonName"/>

			<ImageView
				android:id="@+id/iv_close"
				android:layout_width="@dimen/_11sdp"
				android:layout_height="@dimen/_11sdp"
				android:src="@drawable/ic_close"
				android:tint="@color/gray_text"
				android:gravity="center"
				android:visibility="visible"
				android:layout_marginEnd="@dimen/_14sdp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				tools:ignore="UseAppTint"
				android:contentDescription="@string/close"/>

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/listItems"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxHeight="@dimen/_200sdp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/cl_search"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
